--- a/demos/meson.build
+++ b/demos/meson.build
@@ -1,5 +1,2 @@
-demos_deps = [
-    penrose_dep
-]
-
-executable('ImGuiDemo', 'ImGuiDemo/ImGuiDemo.cpp', dependencies : demos_deps)
+subdir('ImGuiDemo')
+subdir('SceneDemo')
